<resources>
    <string name="app_name">Gestor de Pedidos</string>
    <string name="title_activity_login">LoginActivity</string>

    <string name="email">E-mail</string>
    <string name="senha">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="logout">Logout</string>
    <string name="detalhes">Detalhes</string>
    <string name="aprovar">Aprovar</string>
    <string name="recusar">Recusar</string>
    <string name="cancelar">Cancelar</string>
    <string name="enviar">Enviar</string>
    <string name="concluir">Concluir</string>

    <string name="sem_internet">Você ainda está sem conexão com a internet, verifique as configuraçãoes do seu aparelho</string>


    <!--- Com parametros -->
    <string name="preenchaocampo">Preencha o campo %1$s</string>
    <string name="n_pedido">Pedido: %1$s</string>
    <string name="data_pedido">Data: %1$s . %2$s</string>
    <string name="usuario">Usuário: %1$s</string>
    <string name="telefone">Telefone: (%1$s) %2$s-%3$s</string>
    <string name="endereco">Endereço: %1$s, %2$s</string>
    <string name="endereco_complemento">Endereço: %1$s, %2$s - %3$s</string>
    <string name="bairro">Bairro: %1$s</string>
    <string name="cidade_uf_cep">Cidade: %1$s - %2$s, CEP: %3$s</string>
    <string name="forma_pagamento">Forma de pagamento\n%1$s</string>
    <string name="produtos">Produtos: %1$s</string>
    <string name="desconto">Desconto: %1$s</string>
    <string name="frete">Frete: %1$s</string>
    <string name="cashback">Cashback: %1$s</string>
    <string name="total">Total: %1$s</string>
    <string name="item">Item: %1$s</string>
    <string name="quantidade">Quantidade: %1$s</string>
    <string name="valor_unitario">Valor Unitário: %1$s</string>
    <string name="valor_total">Valor Total: %1$s</string>
    <string name="atualizado_sucesso">Pedido %1$s com sucesso</string>
    <string name="observacao">* %1$s</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
