<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="0dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="5dp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="top"
            android:paddingBottom="8dp">

            <TextView
                android:id="@+id/txtPedido"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/n_pedido"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtDataPedido"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/data_pedido"
                android:textSize="12sp"
                app:layout_constraintEnd_toStartOf="@+id/btnAprovar"
                app:layout_constraintStart_toStartOf="@+id/txtPedido"
                app:layout_constraintTop_toBottomOf="@+id/txtPedido" />

            <TextView
                android:id="@+id/txtUsuario"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="8dp"
                android:text="@string/usuario"
                android:textSize="12sp"
                app:layout_constraintEnd_toStartOf="@+id/btnAprovar"
                app:layout_constraintStart_toStartOf="@+id/txtPedido"
                app:layout_constraintTop_toBottomOf="@+id/txtDataPedido" />

            <TextView
                android:id="@+id/txtTelefone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="8dp"
                android:text="@string/telefone"
                android:textSize="12sp"
                app:layout_constraintEnd_toStartOf="@+id/btnAprovar"
                app:layout_constraintStart_toStartOf="@+id/txtPedido"
                app:layout_constraintTop_toBottomOf="@+id/txtUsuario" />

            <android.support.constraint.ConstraintLayout
                android:id="@+id/constraintLayoutDetalhes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtTelefone">

                <TextView
                    android:id="@+id/txtEndereco"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/endereco"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/txtBairro"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/bairro"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/txtEndereco"
                    app:layout_constraintTop_toBottomOf="@+id/txtEndereco" />

                <TextView
                    android:id="@+id/txtCidade"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/cidade_uf_cep"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/txtBairro"
                    app:layout_constraintTop_toBottomOf="@+id/txtBairro" />
            </android.support.constraint.ConstraintLayout>

            <ImageView
                android:id="@+id/imgExpandir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="@mipmap/ic_mostrar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <Button
                android:id="@+id/btnAprovar"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginEnd="4dp"
                android:background="@drawable/botaologin"
                android:drawableStart="@drawable/ic_aprovar"
                android:fontFamily="@font/comfortaa_light"
                android:paddingLeft="6dp"
                android:textAllCaps="false"
                android:textSize="13sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/btnRecusar"
                app:layout_constraintEnd_toStartOf="@+id/btnRecusar"
                app:layout_constraintTop_toTopOf="@+id/btnRecusar"
                tools:ignore="RtlHardcoded,RtlSymmetry" />

            <Button
                android:id="@+id/btnRecusar"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/botaorecusar"
                android:drawableStart="@drawable/ic_recusar"
                android:fontFamily="@font/comfortaa_light"
                android:paddingLeft="7dp"
                android:textAllCaps="false"
                android:textSize="13sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imgExpandir"
                tools:ignore="RtlHardcoded,RtlSymmetry" />

        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cardViewTotais"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginTop="8dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="0dp"

        app:layout_constraintTop_toBottomOf="@+id/cardView"
        tools:layout_editor_absoluteX="5dp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="top">

            <TextView
                android:id="@+id/txtFormaPagamento"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/forma_pagamento"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@+id/txtTotal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/txtProdutos" />

            <TextView
                android:id="@+id/txtProdutos"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/produtos"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtDesconto"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/desconto"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/txtProdutos"
                app:layout_constraintTop_toBottomOf="@+id/txtProdutos" />

            <TextView
                android:id="@+id/txtFrete"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/frete"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/txtDesconto"
                app:layout_constraintTop_toBottomOf="@+id/txtDesconto" />

            <TextView
                android:id="@+id/txtCashback"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/cashback"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/txtFrete"
                app:layout_constraintTop_toBottomOf="@+id/txtFrete" />

            <TextView
                android:id="@+id/txtTotal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="8dp"
                android:text="@string/total"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/txtCashback"
                app:layout_constraintTop_toBottomOf="@+id/txtCashback" />

        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>